@@ -7,6 +7,7 @@
 	- CSS: Hide links in [spoiler] tags
 	- Added 'select' all to wishlist and moved 'select all' down on notifies
 	- Added char/tag/trait stats to database statistics box
+	- Update traits_chars cache daily using Multi::Maintenance
 	- Bugfix: don't accidentally remove char traits when editing
 	- Bugfix: fixed possible SQL table name clash on history browser
 	- Bugfix: properly announce chars and traits in Multi::IRC
